--- a/resources/assets/sass/helpers/_mixins.scss
+++ b/resources/assets/sass/helpers/_mixins.scss
@@ -2,32 +2,35 @@
 /// @access public
 /// @param {String} $point - Screen size
 @mixin b($point) {
-    @if $point == m {
-        @media (min-width: 768px) {
-            @content;
-        }
+  @if $point == m {
+    @media (min-width: 768px) {
+      @content;
     }
-    @else if $point == l {
-        @media (min-width: 992px) {
-            @content;
-        }
+  } @else if $point == l {
+    @media (min-width: 992px) {
+      @content;
     }
+  } @else if $point == xl {
+    @media (min-height: 1080px) {
+      @content;
+    }
+  }
 }
 
 /// Block Element
 /// @access public
 /// @param {String} $element - Element's name
 @mixin e($element) {
-    &__#{$element} {
-        @content;
-    }
+  &__#{$element} {
+    @content;
+  }
 }
 
 /// Block Modifier
 /// @access public
 /// @param {String} $modifier - Modifier's name
 @mixin m($modifier) {
-    &--#{$modifier} {
-        @content;
-    }
+  &--#{$modifier} {
+    @content;
+  }
 }
