--- a/public/css/main.css
+++ b/public/css/main.css
@@ -647,13 +647,28 @@ a:visited {
 }
 
 /* line 24, ../../resources/assets/sass/helpers/_mixins.scss */
-.form__registerInput {
+.form__largeInput {
   margin-bottom: 21px;
   padding: 10px;
   width: 100%;
+  resize: vertical;
+  font-family: "Source Sans Pro", sans-serif;
+  font-size: 14px;
+}
+/* line 33, ../../resources/assets/sass/helpers/_mixins.scss */
+.form__largeInput--noMargin {
+  margin-bottom: 0;
 }
 /* line 24, ../../resources/assets/sass/helpers/_mixins.scss */
-.form__registerSubmit {
+.form__normalSubmit {
+  background-color: #ef5350 !important;
+  border-radius: 3px !important;
+  color: #fafafa !important;
+  padding: 1px 10px 2px !important;
+  margin: 0 5px;
+}
+/* line 24, ../../resources/assets/sass/helpers/_mixins.scss */
+.form__largeSubmit {
   background-color: #ef5350 !important;
   border-radius: 3px !important;
   color: #fafafa !important;
@@ -662,23 +677,23 @@ a:visited {
   width: 100%;
 }
 /* line 24, ../../resources/assets/sass/helpers/_mixins.scss */
-.form__registerLabel {
+.form__largeLabel {
   bottom: 3px;
   position: relative;
 }
 /* line 33, ../../resources/assets/sass/helpers/_mixins.scss */
-.form__registerLabel--withSmall {
+.form__largeLabel--withSmall {
   bottom: 0;
 }
-/* line 22, ../../resources/assets/sass/components/_forms.scss */
-.form__registerLabel small {
+/* line 35, ../../resources/assets/sass/components/_forms.scss */
+.form__largeLabel small {
   bottom: 3px;
   color: #616161;
   font-size: 0.82em;
   position: relative;
 }
 
-/* line 32, ../../resources/assets/sass/components/_forms.scss */
+/* line 45, ../../resources/assets/sass/components/_forms.scss */
 .formWithCaptcha .g-recaptcha {
   -moz-transform: translateX(-50%);
   -ms-transform: translateX(-50%);
@@ -2841,6 +2856,208 @@ a:visited {
   background-color: #eeeeee;
   padding: 28px 16px;
   position: relative;
+}
+
+/* line 107, ../../resources/assets/sass/pages/_register.scss */
+.editor {
+  max-width: 850px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 2.5em;
+}
+/* line 12, ../../../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/susy-2.2.6/sass/susy/output/support/_clearfix.scss */
+.editor:after {
+  content: " ";
+  display: block;
+  clear: both;
+}
+/* line 24, ../../resources/assets/sass/helpers/_mixins.scss */
+.editor__header {
+  -moz-border-radius-topleft: 4px;
+  -webkit-border-top-left-radius: 4px;
+  border-top-left-radius: 4px;
+  -moz-border-radius-topright: 4px;
+  -webkit-border-top-right-radius: 4px;
+  border-top-right-radius: 4px;
+  overflow: hidden;
+  *zoom: 1;
+  background-color: #ef5350;
+  padding: 18px 16px 14px;
+  position: relative;
+}
+/* line 24, ../../resources/assets/sass/helpers/_mixins.scss */
+.editor__header__title {
+  color: #fafafa;
+  float: left;
+  font-size: 1.5em;
+  font-weight: 600;
+  margin-bottom: 12px;
+  width: 90%;
+}
+/* line 126, ../../resources/assets/sass/pages/_register.scss */
+.editor__header__title small {
+  bottom: 1px;
+  font-size: 0.8em;
+  font-weight: 400;
+  position: relative;
+}
+/* line 24, ../../resources/assets/sass/helpers/_mixins.scss */
+.editor__header__description {
+  color: #f5f5f5;
+  float: left;
+  font-size: 1.05em;
+  font-weight: 100;
+  width: 90%;
+}
+/* line 24, ../../resources/assets/sass/helpers/_mixins.scss */
+.editor__header__icon {
+  float: right;
+  width: 5%;
+}
+/* line 33, ../../resources/assets/sass/helpers/_mixins.scss */
+.editor__header__icon--alt {
+  width: 10%;
+}
+/* line 24, ../../resources/assets/sass/helpers/_mixins.scss */
+.editor__header__icon__path {
+  fill: #f5f5f5;
+}
+/* line 24, ../../resources/assets/sass/helpers/_mixins.scss */
+.editor__header__select {
+  width: 100%;
+  padding: 1px 0 1px 10px;
+  margin-bottom: 21px;
+  height: 41px;
+}
+/* line 157, ../../resources/assets/sass/pages/_register.scss */
+.editor__header__select option {
+  padding: 10px;
+}
+/* line 24, ../../resources/assets/sass/helpers/_mixins.scss */
+.editor__body {
+  overflow: hidden;
+  *zoom: 1;
+  background-color: #eeeeee;
+  padding: 15px;
+  -moz-border-radius-bottomleft: 4px;
+  -webkit-border-bottom-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+  -moz-border-radius-bottomright: 4px;
+  -webkit-border-bottom-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+/* line 24, ../../resources/assets/sass/helpers/_mixins.scss */
+.editor__body__buttons {
+  text-align: center;
+}
+/* line 24, ../../resources/assets/sass/helpers/_mixins.scss */
+.editor__main {
+  overflow: hidden;
+  *zoom: 1;
+  background-color: #eeeeee;
+  padding: 15px;
+}
+/* line 24, ../../resources/assets/sass/helpers/_mixins.scss */
+.editor__main__block {
+  width: 50%;
+  float: left;
+}
+/* line 185, ../../resources/assets/sass/pages/_register.scss */
+.editor__main__block:first-of-type {
+  padding-right: 7.5px;
+}
+/* line 188, ../../resources/assets/sass/pages/_register.scss */
+.editor__main__block:last-of-type {
+  padding-left: 7.5px;
+}
+/* line 24, ../../resources/assets/sass/helpers/_mixins.scss */
+.editor__controls {
+  background-color: #ef5350;
+  position: relative;
+  text-align: center;
+  -moz-transition: padding-bottom 0.2s ease;
+  -o-transition: padding-bottom 0.2s ease;
+  -webkit-transition: padding-bottom 0.2s ease;
+  transition: padding-bottom 0.2s ease;
+}
+/* line 199, ../../resources/assets/sass/pages/_register.scss */
+.editor__controls:hover {
+  padding-bottom: 15px;
+}
+/* line 24, ../../resources/assets/sass/helpers/_mixins.scss */
+.editor__controls__separator {
+  background-color: #eeeeee;
+  display: inline-block;
+  height: 30px;
+  position: relative;
+  top: 2px;
+  width: 1px;
+}
+/* line 24, ../../resources/assets/sass/helpers/_mixins.scss */
+.editor__controls__item {
+  display: inline-block;
+  height: 45px;
+  padding: 10px;
+  width: 45px;
+  cursor: pointer;
+  position: relative;
+  -moz-transition: background-color 0.2s ease;
+  -o-transition: background-color 0.2s ease;
+  -webkit-transition: background-color 0.2s ease;
+  transition: background-color 0.2s ease;
+}
+/* line 220, ../../resources/assets/sass/pages/_register.scss */
+.editor__controls__item:hover {
+  background-color: #ed413d;
+}
+/* line 222, ../../resources/assets/sass/pages/_register.scss */
+.editor__controls__item:hover .editor__controls__item__name {
+  filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
+  opacity: 1;
+  -moz-transition-delay: 0.35s;
+  -o-transition-delay: 0.35s;
+  -webkit-transition-delay: 0.35s;
+  transition-delay: 0.35s;
+}
+/* line 24, ../../resources/assets/sass/helpers/_mixins.scss */
+.editor__controls__item__name {
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+  opacity: 0;
+  -moz-transition: opacity 0.2s ease;
+  -o-transition: opacity 0.2s ease;
+  -webkit-transition: opacity 0.2s ease;
+  transition: opacity 0.2s ease;
+  -moz-transition-delay: 0s;
+  -o-transition-delay: 0s;
+  -webkit-transition-delay: 0s;
+  transition-delay: 0s;
+  -moz-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
+  bottom: -13px;
+  color: #fafafa;
+  font-size: 14px;
+  font-weight: 600;
+  white-space: nowrap;
+  left: 50%;
+  position: absolute;
+}
+/* line 24, ../../resources/assets/sass/helpers/_mixins.scss */
+.editor__controls__icon {
+  height: 25px;
+  width: 25px;
+}
+/* line 33, ../../resources/assets/sass/helpers/_mixins.scss */
+.editor__controls__icon--small {
+  -moz-transform: scale(0.85, 0.85);
+  -ms-transform: scale(0.85, 0.85);
+  -webkit-transform: scale(0.85, 0.85);
+  transform: scale(0.85, 0.85);
+}
+/* line 24, ../../resources/assets/sass/helpers/_mixins.scss */
+.editor__controls__icon__path {
+  fill: #fafafa;
 }
 
 /* line 1, ../../resources/assets/sass/pages/_user.scss */
